# btc_bot

./: .dockerignore  .env  .gitignore  Dockerfile  misc.ipynb  pyproject.toml  requirements.txt  working.ipynb
btc_bot/live/: bootstrap.py  config.py  engine.py  main_demo.py  models.py  orchestrator.py  run_paper_live.py  run_paper_live_binance.py  run_paper_live_bitget.py  run_paper_live_common.py
btc_bot/live/binance/: binance_live_socket_bridge.py  binance_ws_public_client.py  rest_market_data.py
btc_bot/live/bitget/: bitget_APi_exception.py  bitget_constants.py  bitget_live_socket_bridge.py  ws_msg_dispatcher.py  ws_public_client.py  ws_tools.py
btc_bot/live/execution/: paper_executor.py
btc_bot/live/logging/: trade_logger.py  trade_stats_tracker.py
btc_bot/live/ml/: artifacts.py  inference.py
btc_bot/live/regime/: atr_live.py
btc_bot/live/router/: router.py
btc_bot/live/stage0/: bucketizer.py  config_loader.py  detector.py  features.py  ms_cut_monitor.py
btc_bot/live/trade/: lifecycle.py  pnl.py  sizing.py
btc_bot/misc/: compare_logs.py  replay_forensic.py
